--- a/angular-lab/src/app/app.component.html
+++ b/angular-lab/src/app/app.component.html
@@ -5,6 +5,10 @@
     <li><a routerLink="/products">Products</a></li>
   </ul>
 </nav>
+<ul>
+  <li *ngFor="let item of data">{{ item.name }}</li>
+</ul>
 
-<router-outlet></router-outlet>
+
+<!-- <router-outlet></router-outlet> -->
 
