--- a/app-for-labs/src/app/app.component.html
+++ b/app-for-labs/src/app/app.component.html
@@ -1,3 +1,12 @@
-<ul>
+<!-- TS070_Shubham_Rathod-Lab 68: Services and Dependency Injection -->
+
+<!-- <ul>
   <li *ngFor="let item of data">{{ item.name }}</li>
-</ul>
+</ul> -->
+
+<!-- TS070_Shubham_Rathod-Lab 69: Routing -->
+<nav>
+  <a routerLink="/">Home</a>
+  <a routerLink="/about">About</a>
+</nav>
+<router-outlet></router-outlet>
