--- a/app-for-labs/src/app/app.component.html
+++ b/app-for-labs/src/app/app.component.html
@@ -5,8 +5,12 @@
 </ul> -->
 
 <!-- TS070_Shubham_Rathod-Lab 69: Routing -->
-<nav>
+<!-- <nav>
   <a routerLink="/">Home</a>
   <a routerLink="/about">About</a>
 </nav>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
+
+<app-forms></app-forms>
+
+
