TS070_Shubham_Rathod-Lab 80: Angular Animations

--- a/app-for-labs/src/app/app.component.html
+++ b/app-for-labs/src/app/app.component.html
@@ -11,6 +11,9 @@
 </nav>
 <router-outlet></router-outlet> -->
 
-<app-forms></app-forms>
+<!-- <app-forms></app-forms> -->
+
+<!-- Lab 80: Angular Animations -->
+<app-animations></app-animations>
 
 
