Lab 82: Angular Security Best Practices

--- a/app-for-labs/src/app/app.component.html
+++ b/app-for-labs/src/app/app.component.html
@@ -15,5 +15,6 @@
 
 <!-- Lab 80: Angular Animations -->
 <app-animations></app-animations>
-
+<!-- <app-login></app-login> -->
+ <!-- <app-protected></app-protected> -->
 
